syntax = "proto3";

option csharp_namespace = "GrpcService";

package chat;

// The request message containing the user's name.
message Message {
  string username = 1;
  string body = 2;
  uint64 game_room = 3;
}
message Empty{}

message RequestMessage {
  string username = 1;
  uint64 game_room = 2;
}
service Chat {
  rpc Write(Message) returns (Empty) {}
  rpc StartMessaging(RequestMessage) returns (stream Message){}
}